:lipstick: optimize weapon & card detail view

--- a/src/app/features/data/weapons/weapons.component.scss
+++ b/src/app/features/data/weapons/weapons.component.scss
@@ -6,4 +6,16 @@ table {
     tr.hover {
         cursor: pointer;
     }
+
+    // Highlight selected row
+    tr.active {
+        background-color: hsl(var(--p) / 0.1);
+    }
+}
+
+// Detail Side Panel overlay variant (Tailwind: bg-base-200 used in template)
+.detail-panel.overlay {
+    width: 100%;
+    max-width: 60%;
+    border-left: none;
 }
