--- a/src/app/features/data/items/items.component.scss
+++ b/src/app/features/data/items/items.component.scss
@@ -14,6 +14,10 @@
 }
 
 table {
+    width: max-content;
+    min-width: 100%;
+    table-layout: fixed;
+
     tr.hover {
         cursor: pointer;
     }
