--- a/src/app/features/data/weapons/weapons.component.html
+++ b/src/app/features/data/weapons/weapons.component.html
@@ -629,7 +629,8 @@
                                     ></span>
                                 } @else if (col.field === 'key') {
                                     <span
-                                        class="text-xs"
+                                        class="text-xs truncate block"
+                                        [title]="weapon.key"
                                         [innerHTML]="highlight(weapon.key)"
                                     ></span>
                                 } @else {
