--- a/src/app/features/servers/servers.component.html
+++ b/src/app/features/servers/servers.component.html
@@ -91,7 +91,7 @@
             </h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-3">
                 <!-- Search -->
-                <div class="form-control">
+                <div class="flex flex-col">
                     <label class="label py-1">
                         <span class="label-text text-xs">{{
                             t('servers.search')
@@ -107,7 +107,7 @@
                 </div>
 
                 <!-- Country Filter -->
-                <div class="form-control">
+                <div class="flex flex-col">
                     <label class="label py-1">
                         <span class="label-text text-xs">{{
                             t('servers.country')
@@ -128,7 +128,7 @@
                 </div>
 
                 <!-- Map Filter -->
-                <div class="form-control">
+                <div class="flex flex-col">
                     <label class="label py-1">
                         <span class="label-text text-xs">{{
                             t('servers.map')
@@ -147,9 +147,9 @@
                 </div>
 
                 <!-- Favorites Toggle -->
-                <div class="form-control flex justify-end">
+                <div class="flex flex-col">
                     <label
-                        class="label cursor-pointer justify-start gap-3 py-1 mt-auto"
+                        class="label cursor-pointer justify-start gap-3 py-1"
                     >
                         <input
                             type="checkbox"
@@ -239,7 +239,9 @@
                         <!-- Right sticky: Action -->
                         <th
                             class="w-20 min-w-20 sticky right-0 z-30 bg-base-200 border-l border-base-300"
-                        ></th>
+                        >
+                            {{ t('servers.column.action') }}
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
