--- a/src/app/features/players/players.component.html
+++ b/src/app/features/players/players.component.html
@@ -107,7 +107,8 @@
                             type="text"
                             [placeholder]="t('players.search_placeholder')"
                             class="input input-bordered input-sm join-item flex-1"
-                            [value]="filter().search || ''"
+                            [value]="searchInput()"
+                            (input)="onSearchInput($event)"
                             (keydown)="onSearchKeydown($event)"
                         />
                         <button
@@ -117,7 +118,7 @@
                         >
                             <i-lucide name="search" class="h-3 w-3"></i-lucide>
                         </button>
-                        @if (filter().search) {
+                        @if (searchInput()) {
                             <button
                                 class="btn btn-sm join-item"
                                 (click)="clearSearch()"
